Fixed z-index on card and marker hover to bring highlighted market to top

--- a/src/components/RideTo/MapComponent/styles.scss
+++ b/src/components/RideTo/MapComponent/styles.scss
@@ -19,6 +19,10 @@
   }
 }
 
+.mapMarker:hover {
+  z-index: 100;
+}
+
 .mapPinBgUnavailable {
   fill: var(--grey-color);
 }
