--- a/src/components/RideTo/ResultPage/CourseItem/styles.scss
+++ b/src/components/RideTo/ResultPage/CourseItem/styles.scss
@@ -192,3 +192,7 @@
 .mapPinHighlight {
   fill: var(--primary-color) !important;
 }
+
+.markerTop {
+  z-index: 100;
+}
